@@ -61,6 +61,10 @@ static inline void Usb_DfuWaitForReset(struct dfu_if *DFU)
 
 	/* This bit would be cleared when reset happens*/
 	DFU->dfu_wait_for_interrupt = 1;
+<<<<<<< HEAD
+=======
+	dmb();
+>>>>>>> drivers: usbpsu: Change dfu example code to be in sync with common example code
 	while (DFU->dfu_wait_for_interrupt == 0) {
 		/* Wait for an reset event */
 		;
