@@ -44,9 +44,12 @@
  * 1.0   vak  30/11/16 First release
  * 1.4	 BK   12/01/18 Renamed the file to be in sync with usb common code
  *		       changes for all USB IPs
+<<<<<<< HEAD
  *	 vak  22/01/18 Added changes for supporting microblaze platform
  *	 vak  13/03/18 Moved the setup interrupt system calls from driver to
  *		       example.
+=======
+>>>>>>> drivers: usbpsu: Change dfu example code to be in sync with common example code
  * </pre>
  *
  *****************************************************************************/
@@ -56,6 +59,7 @@
 #include "xparameters.h"
 #include "xusb_ch9_dfu.h"
 #include "xusb_class_dfu.h"
+<<<<<<< HEAD
 #include "xusb_wrapper.h"
 #include "xil_exception.h"
 
@@ -66,18 +70,24 @@
 #elif defined PLATFORM_ZYNQMP
 #include "xscugic.h"
 #endif
+=======
+>>>>>>> drivers: usbpsu: Change dfu example code to be in sync with common example code
 
 /************************** Constant Definitions ****************************/
 
 /************************** Function Prototypes ******************************/
+<<<<<<< HEAD
 static s32 SetupInterruptSystem(struct XUsbPsu *InstancePtr, u16 IntcDeviceID,
 		u16 USB_INTR_ID, void *IntcPtr);
+=======
+>>>>>>> drivers: usbpsu: Change dfu example code to be in sync with common example code
 
 /************************** Variable Definitions *****************************/
 struct Usb_DevData UsbInstance;
 
 Usb_Config *UsbConfigPtr;
 
+<<<<<<< HEAD
 #ifdef __MICROBLAZE__
 #ifdef XPAR_INTC_0_DEVICE_ID
 XIntc	InterruptController;	/*XIntc interrupt controller instance */
@@ -99,6 +109,9 @@ XScuGic	InterruptController;	/* Interrupt controller instance */
 #define	INTC_DEVICE_ID		0
 #define	USB_INT_ID		0
 #endif
+=======
+XScuGic InterruptController;  /* Interrupt controller instance */
+>>>>>>> drivers: usbpsu: Change dfu example code to be in sync with common example code
 
 u8 VirtFlash[0x10000000];
 
@@ -182,7 +195,11 @@ int main(void)
 
 	/* setup interrupts */
 	Status = SetupInterruptSystem(UsbInstance.PrivateData, INTC_DEVICE_ID,
+<<<<<<< HEAD
 					USB_INT_ID, (void *)&InterruptController);
+=======
+					&InterruptController);
+>>>>>>> drivers: usbpsu: Change dfu example code to be in sync with common example code
 	if (Status != XST_SUCCESS)
 		return XST_FAILURE;
 
@@ -193,6 +210,7 @@ int main(void)
 		/* Rest is taken care by interrupts */
 	}
 }
+<<<<<<< HEAD
 
 /****************************************************************************/
 /**
@@ -369,3 +387,5 @@ static s32 SetupInterruptSystem(struct XUsbPsu *InstancePtr, u16 IntcDeviceID,
 
 	return XST_SUCCESS;
 }
+=======
+>>>>>>> drivers: usbpsu: Change dfu example code to be in sync with common example code
