@@ -443,6 +443,7 @@ Modify USBPSU driver code to fit USB common example code for all USB IPs
 Added support for flushing Dcache for setupdata packet for control ep's
 Changed the mass storage examples to be in sync with common mode example code
 <<<<<<< HEAD
+<<<<<<< HEAD
 Changed the dfu examples to be in sync with common example code
 Added hibernation support for usb
 Added changes to usbpsu driver for supporting microblaze platform
@@ -535,6 +536,9 @@ Added support for flushing Dcache for setupdata packet for control ep's
 >>>>>>> drivers: usbpsu: change driver for adding common example code for all USB IPs
 =======
 >>>>>>> drivers: usbpsu: Add common mass storage example changes
+=======
+Changed the dfu examples to be in sync with common example code
+>>>>>>> drivers: usbpsu: Change dfu example code to be in sync with common example code
 
 Changes for 2017.4
 ===============================
